--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,47 @@
+# Java Maven CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-java/ for more details
 version: 2
 jobs:
   build:
     docker:
+      # specify the version you desire here
       - image: circleci/openjdk:8u151-jdk-node
+
+    working_directory: ~/repo
+    environment:
+      # Customize the JVM maximum heap limit
+      MAVEN_OPTS: -Xmx3200m
     steps:
-      - checkout
-      - run: echo "A first hello"
+      - checkout       
+      - run: echo "Running from .circleci/config.yml"
+      # Download and cache dependencies
+      - restore_cache:
+          keys:
+            - v1-dependencies-{{ checksum "pom.xml" }}
+            # fallback to using the latest cache if no exact match is found
+            - v1-dependencies-		
+      - run:
+          name: Running X virtual framebuffer
+          command: Xvfb :0 -ac &
+
+      - run:
+          name: Run Tests
+          command: |
+            export DISPLAY=:99
+      - run:
+          name: Maven Install
+          command:  mvn dependency:go-offline install
+          
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: v1-dependencies-{{ checksum "pom.xml" }}
+
+      - run: mvn clean install -e	
+      - store_artifacts:
+          path: ~/repo/report
+          destination: tr1
+      - store_test_results:
+          path: ~/repo/report
+      #- run: mail -s "Cucumber Test Results" -a ~/repo/report/cucumber-html-reports/overview-features.html vinesh.c@brillio.com < ~/repo/report/cucumber-html-reports/
