--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,12 @@
 	</build>
 
 	<dependencies>
+		
+		<dependency>
+           		<groupId>org.slf4j</groupId>
+           		<artifactId>slf4j-simple</artifactId>
+           		<version>1.6.1</version>
+       		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-path -->
 		<dependency>
