--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,9 @@ jobs:
             - ~/.m2
           key: v1-dependencies-{{ checksum "pom.xml" }}
 
-      - run: mvn clean install -e
+      - run: mvn clean
+      - run: mvn compile
+      - run: mvn test
       - store_artifacts:
           path: ~/repo/report
           destination: tr1
